[feature]完善搜索服务